[package]
name = "lib-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.19", features = [ "serde" ] }
reqwest = { version = "0.11", features = ["blocking"] }
tokio = "1.19"
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
roxmltree = "0.13"
chrono = "0.4"
open = "1"
